--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
-*.js linguist-language=javaScript
-*.css linguist-language=javaScript
-*.html linguist-language=javaScript
+*.js linguist-language=JavaScript
+*.css linguist-language=CSS
+*.html linguist-language=HTML
+*.ts linguist-language=TypeScript
+*.tsx linguist-language=TypeScript
+
