--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 *.css linguist-language=CSS
 *.html linguist-language=HTML
 *.ts linguist-language=TypeScript
-*.tsx linguist-language=TypeScript
+*.tsx linguist-language=React
 
